--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jesusriv/major-gift-part2#readme",
   "dependencies": {
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.1.0",
     "nodemon": "^2.0.20",
